crates/ggml/sys/src/lib.rs

extern "C" {
    pub fn ggml_opt_init(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        params: ggml_opt_params,
        nx: i64,
    );
}
extern "C" {
    pub fn ggml_opt_resume(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        f: *mut ggml_tensor,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_opt_resume_g(
        ctx: *mut ggml_context,
        opt: *mut ggml_opt_context,
        f: *mut ggml_tensor,
        gf: *mut ggml_cgraph,
        gb: *mut ggml_cgraph,
    ) -> ggml_opt_result;
}
extern "C" {
    pub fn ggml_quantize_q4_0(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_quantize_q4_1(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_quantize_q5_0(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_quantize_q5_1(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_quantize_q8_0(
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        n: ::std::os::raw::c_int,
        k: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_quantize_chunk(
        type_: ggml_type,
        src: *const f32,
        dst: *mut ::std::os::raw::c_void,
        start: ::std::os::raw::c_int,
        n: ::std::os::raw::c_int,
        hist: *mut i64,
    ) -> usize;
}
extern "C" {
    pub fn ggml_cpu_has_avx() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx2() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512_vbmi() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_avx512_vnni() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_neon() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_arm_fma() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_f16c() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_fp16_va() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_wasm_simd() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_blas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_cublas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_clblast() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_gpublas() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_sse3() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn ggml_cpu_has_vsx() -> ::std::os::raw::c_int;
}
pub type ggml_to_float_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const ::std::os::raw::c_void, y: *mut f32, k: ::std::os::raw::c_int),
>;
pub type ggml_from_float_t = ::std::option::Option<
    unsafe extern "C" fn(x: *const f32, y: *mut ::std::os::raw::c_void, k: ::std::os::raw::c_int),
>;
pub type ggml_vec_dot_t = ::std::option::Option<
    unsafe extern "C" fn(
        n: ::std::os::raw::c_int,
        s: *mut f32,
        x: *const ::std::os::raw::c_void,
        y: *const ::std::os::raw::c_void,
    ),
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ggml_type_traits_t {
    pub to_float: ggml_to_float_t,
    pub from_float: ggml_from_float_t,
    pub from_float_reference: ggml_from_float_t,
    pub vec_dot: ggml_vec_dot_t,
    pub vec_dot_type: ggml_type,
}
#[test]
fn bindgen_test_layout_ggml_type_traits_t() {
    const UNINIT: ::std::mem::MaybeUninit<ggml_type_traits_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ggml_type_traits_t>(),
        40usize,
        concat!("Size of: ", stringify!(ggml_type_traits_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ggml_type_traits_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ggml_type_traits_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).to_float) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_type_traits_t),
            "::",
            stringify!(to_float)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).from_float) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_type_traits_t),
            "::",
            stringify!(from_float)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).from_float_reference) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_type_traits_t),
            "::",
            stringify!(from_float_reference)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vec_dot) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_type_traits_t),
            "::",
            stringify!(vec_dot)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vec_dot_type) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ggml_type_traits_t),
            "::",
            stringify!(vec_dot_type)
        )
    );
}
extern "C" {
    pub fn ggml_internal_get_type_traits(i: ggml_type) -> ggml_type_traits_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct block_q2_K {
    pub scales: [u8; 16usize],
    pub qs: [u8; 64usize],
    pub d: ggml_fp16_t,
    pub dmin: ggml_fp16_t,
}
#[test]
fn bindgen_test_layout_block_q2_K() {
    const UNINIT: ::std::mem::MaybeUninit<block_q2_K> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<block_q2_K>(),
        84usize,
        concat!("Size of: ", stringify!(block_q2_K))
    );
    assert_eq!(
        ::std::mem::align_of::<block_q2_K>(),
        2usize,
        concat!("Alignment of ", stringify!(block_q2_K))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).scales) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q2_K),
            "::",
            stringify!(scales)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).qs) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q2_K),
            "::",
            stringify!(qs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q2_K),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dmin) as usize - ptr as usize },
        82usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q2_K),
            "::",
            stringify!(dmin)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct block_q3_K {
    pub hmask: [u8; 32usize],
    pub qs: [u8; 64usize],
    pub scales: [u8; 12usize],
    pub d: ggml_fp16_t,
}
#[test]
fn bindgen_test_layout_block_q3_K() {
    const UNINIT: ::std::mem::MaybeUninit<block_q3_K> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<block_q3_K>(),
        110usize,
        concat!("Size of: ", stringify!(block_q3_K))
    );
    assert_eq!(
        ::std::mem::align_of::<block_q3_K>(),
        2usize,
        concat!("Alignment of ", stringify!(block_q3_K))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).hmask) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q3_K),
            "::",
            stringify!(hmask)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).qs) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q3_K),
            "::",
            stringify!(qs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).scales) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q3_K),
            "::",
            stringify!(scales)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize },
        108usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q3_K),
            "::",
            stringify!(d)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct block_q4_K {
    pub d: ggml_fp16_t,
    pub dmin: ggml_fp16_t,
    pub scales: [u8; 12usize],
    pub qs: [u8; 128usize],
}
#[test]
fn bindgen_test_layout_block_q4_K() {
    const UNINIT: ::std::mem::MaybeUninit<block_q4_K> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<block_q4_K>(),
        144usize,
        concat!("Size of: ", stringify!(block_q4_K))
    );
    assert_eq!(
        ::std::mem::align_of::<block_q4_K>(),
        2usize,
        concat!("Alignment of ", stringify!(block_q4_K))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).d) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q4_K),
            "::",
            stringify!(d)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).dmin) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q4_K),
            "::",
            stringify!(dmin)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).scales) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q4_K),
            "::",
            stringify!(scales)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).qs) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(block_q4_K),
            "::",
            stringify!(qs)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct block_q5_K {
    pub d: ggml_fp16_t,
    pub dmin: ggml_fp16_t,
    pub scales: [u8; 12usize],
    pub qh: [u8; 32usize],
    pub qs: [u8; 128usize],
}
